--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            # install the dependencies needed for your playbook
+            # install dependencies needed for your playbook
             apk add --update ansible 
       - run:
           name: Configure server
