--- a/main-remote.yml
+++ b/main-remote.yml
@@ -1,6 +1,6 @@
  # Exercise for setting up a web server in an EC
 - name: Exercise for setting up a web server in an EC2
-  hosts: webservers
+  hosts: all
   user: ubuntu
   become: true
   become_method: sudo
