--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,10 @@ jobs:
           name: Configure server
           command: |
             ansible-playbook -i inventory main-remote.yml
+            
+workflows:
+  # Name the workflow "welcome"
+  my_workflow:
+    # Run the welcome/run job in its own container
+    jobs:
+      - configure_infrastructure
