--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory main-remote.yml
+            ansible-playbook -i inventory.txt main-remote.yml
             
 workflows:
   # Name the workflow "welcome"
