--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,28 @@
 version: 2.1
+commands:
+   # Exercise - Rollback
+   destroy_environment:
+     steps:
+       - run:
+           name: Destroy environment
+           # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+           # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+           when: on_fail
+           command: |
+             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
 jobs:
+ create_infrastructure: 
+  docker:
+   - image: amazon/aws-cli
+  steps:
+   - checkout
+   - run:
+       name: Create Cloudformation Stack
+       command: |
+         aws cloudformation deploy \
+           --template-file template.yml \
+           --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
+           --region us-east-1
 #  configure_infrastructure: 
 #     docker:
 #       - image: python:3.7-alpine3.11
@@ -17,23 +40,16 @@ jobs:
 #           command: |
 #             ansible-playbook -i inventory.txt main-remote.yml
             
- # Exercise: Smoke Testing
+# Exercise: Smoke Testing
  smoke_test:
   docker:
    - image: alpine:latest
   steps:
-   - run: apk add --update curl
    - run:
-       name: smoke test
-       command: |
-         URL="https://blog.udacity.com/"
-         # Test if website exists
-         if curl -s --head ${URL} 
-         then
-           return 0
-         else
-           return 1
-         fi      
+       name: Test job
+       # Fail the job intentionally to simulate an error.
+       command:  return 1
+   - destroy_environment  
             
 workflows:
   # Name the workflow "welcome"
@@ -41,4 +57,6 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
 #     - configure_infrastructure
+      - create_infrastructure
       - smoke_test
+
